# picoMIPS-assembler

./: .atom-build.yml  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  assembly.asm  conanfile.txt  input_handler.cpp  main.cpp  picomips-instructions.json
components/: CMakeLists.txt  assembler.cpp  assembly_lexer.cpp
components/includes/: assembler.hpp  assembly_lexer.hpp
includes/: input_handler.hpp  main.hpp
